@@ -7,6 +7,8 @@ import com.safesteps.backend.domain.common.exception.BadRequestException;
 import com.safesteps.backend.domain.common.exception.GlobalExceptionHandler;
 import com.safesteps.backend.domain.common.exception.ResourceNotFoundException;
 import com.safesteps.backend.domain.users.dto.FilterRequestDTO;
+import com.safesteps.backend.domain.users.dto.PremiDTO;
+import com.safesteps.backend.domain.users.dto.RouteCompletionResponseDTO;
 import com.safesteps.backend.domain.users.dto.UserRequestDTO;
 import com.safesteps.backend.domain.users.dto.UserResponseDTO;
 import com.safesteps.backend.domain.users.model.UserFilter;
@@ -22,7 +24,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.doThrow;
@@ -54,7 +56,7 @@ class UserControllerTest {
     @Test
     @DisplayName("GET /api/v1/users - Retorna lista vacía o llena (OK)")
     void getAll_ReturnsList() throws Exception {
-        when(userService.getAllUsers()).thenReturn(Arrays.asList(new UserResponseDTO()));
+        when(userService.getAllUsers()).thenReturn(List.of(new UserResponseDTO()));
 
         mockMvc.perform(get("/api/v1/users"))
                 .andExpect(status().isOk())
@@ -220,6 +222,47 @@ class UserControllerTest {
         mockMvc.perform(patch("/api/v1/users/none/language")
                         .param("lang", "es"))
                 .andExpect(status().isNotFound());
+    }
+
+    @Test
+    @DisplayName("GET /api/v1/users/{googleId}/open-prize - Usuario existe (OK)")
+    void requestPrize_OK() throws Exception {
+        PremiDTO p = new PremiDTO();
+        p.setId("prize-123");
+        p.setUrl("http://example.com/prize.png");
+
+        when(userService.openPrize("googleId")).thenReturn(p);
+
+        mockMvc.perform(get("/api/v1/users/googleId/open-prize"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.id").value("prize-123"))
+                .andExpect(jsonPath("$.url").value("http://example.com/prize.png"));
+    }
+
+    @Test
+    @DisplayName("GET /api/v1/users/{googleId}/complete-route - Suma puntos y devuelve nivel")
+    void completeRoute_OK() throws Exception {
+        RouteCompletionResponseDTO response = new RouteCompletionResponseDTO(2L, true, 2L, 101L, 1L);
+
+        when(userService.completeRoute("googleId", 150.0)).thenReturn(response);
+
+        mockMvc.perform(get("/api/v1/users/googleId/complete-route")
+                        .param("meters", "150"))
+                .andExpect(status().isOk())
+                .andExpect(content().contentTypeCompatibleWith(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$.level").value(2))
+                .andExpect(jsonPath("$.levelUpdated").value(true))
+                .andExpect(jsonPath("$.pointsAdded").value(2))
+                .andExpect(jsonPath("$.totalPoints").value(101))
+                .andExpect(jsonPath("$.recompenses").value(1));
+    }
+
+    @Test
+    @DisplayName("GET /api/v1/users/{googleId}/complete-route - Falta distancia")
+    void completeRoute_MissingMeters_ReturnsBadRequest() throws Exception {
+        mockMvc.perform(get("/api/v1/users/googleId/complete-route"))
+                .andExpect(status().isBadRequest());
     }
 
     // --- HELPER METHOD ---
